cncProd/force-app/main/default/objects/GFB_App_Feedback_NPS_Survey__c/fields/Feedback_or_suggestions__c.field-meta.xml
<CustomField>
    <fullName>Feedback_or_suggestions__c</fullName>
    <label>Feedback or suggestions</label>
    <length>200</length>
    <type>Text</type>
</CustomField>