cncProd/force-app/main/default/objects/GFB_App_Feedback_NPS_Survey__c/fields/Likeliness_to_Recommend_myCNC_App__c.field-meta.xml
<CustomField>
    <fullName>Likeliness_to_Recommend_myCNC_App__c</fullName>
    <label>Likeliness to Recommend myCNC App</label>
    <length>200</length>
    <type>Text</type>
</CustomField>