cncProd/force-app/main/default/objects/GFB_App_Feedback_NPS_Survey__c/fields/Problem_of_App_and_Action_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Problem_of_App_and_Action_of_Customer__c</fullName>
    <label>Problem of App and Action of Customer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>