cncProd/force-app/main/default/objects/GFB_App_Feedback_NPS_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Features_in_app__c</columns>
    <columns>Feedback_or_suggestions__c</columns>
    <columns>Likeliness_to_Recommend_myCNC_App__c</columns>
    <columns>Problem_of_App_and_Action_of_Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>